# clinescope

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feedback.yml  scorer_request.yml
.github/workflows/: ci.yml  release.yml
docs/: building-with-agents.md  harness-gap.md  judge-validation.md  quickstart.md  usage.md
examples/: apply-patch-trace.json  apply-recovery-trace.json  gate-regression-badpatch.json  live-gpt-oss-add-file.json  live-gpt-oss-apply-fail.json  multi-op-trace.json  sample-trace.json
examples/corpus/: README.md  corpus.json  live-gpt-oss-trace.json  live-gpt-oss-update-2hunk.json  llama-code-dump.json  qwen-missing-tools.json
examples/extension/: README.md  api_conversation_history.constructed.json  api_conversation_history.real.json  api_conversation_history.write-file.json  ui_messages.real.json  ui_messages.write-file.json
examples/gold/: dm-hardcase-01-py-retype-timeout-pair.json  dm-hardcase-02-js-retype-header-pair.json  dm-hardcase-03-go-retype-struct-fields.json  dm-hardcase-04-yaml-retype-resource-limits.json  dm-hardcase-05-py-settings-interleaved-retype.json  dm-hardcase-06-go-handler-interleaved-fields.json  dm-hardcase-07-yaml-ci-interleaved-steps.json  dm-hardcase-08-fix-timeout-constant.json  dm-hardcase-09-add-py-typed-marker.json  dm-hardcase-10-rename-util-module.json  dm-hardcase-11-add-nil-guard.json  dm-hardcase-12-bump-replicas-two-line.json  dm-hardcase-13-blind-retype-normalize-fn.json  dm-hardcase-14-blind-retype-js-retry-config.json  dm-hardcase-15-blind-retype-go-limits-mixed.json  dm-hardcase-16-blind-retype-yaml-ci-matrix.json  dm-hardcase-17-retype-normalize-body.json  dm-hardcase-18-retype-retry-config.json  dm-hardcase-19-retype-parse-args-go.json  dm-hardcase-20-retype-reducer-js.json  dm-hardcase-21-python-http-timeout-default.json  dm-hardcase-22-go-server-const-poolsize.json  dm-hardcase-23-yaml-deploy-image-tag.json  dm-hardcase-24-js-retry-max-attempts.json  dm-hardcase-25-py-retype-two-thresholds.json  dm-hardcase-26-ts-retype-two-flags.json  dm-hardcase-27-py-interleaved-defaults.json  dm-hardcase-28-go-interleaved-consts.json  dm-hardcase-29-fix-single-return.json  dm-hardcase-30-add-one-import.json  dm-hardcase-31-bump-single-version.json  dm-hardcase-32-add-newline-eof.json  dm-hardcase-33-py-timeout-in-big-block.json  dm-hardcase-34-yaml-image-in-pod.json  dm-hardcase-35-go-one-field-in-struct.json  dm-hardcase-36-js-one-option-in-object.json  dm-hardcase-37-py-split-compute.json  dm-hardcase-38-go-split-parse.json  dm-hardcase-39-js-split-reducer.json  dm-hardcase-40-py-split-validate.json  (+8 more)
examples/harness-gap/: README.md  gptoss-bare.messages.json  gptoss-harness.messages.json  granite-bare.messages.json  granite-harness.messages.json  qwen-bare.messages.json  qwen-harness.messages.json
gold/: README.md  diff_minimality.gold.jsonl  diff_minimality.judge.jsonl
scripts/: gen_hardcases_25_48.py  render_demo_svg.py
src/agent_eval_harness/: __init__.py  __main__.py  report.py  tool_selection.py  world_a.py
src/clinescope/: __init__.py  __main__.py  _datafiles.py  advice.py  agreement.py  agreement_multi.py  apply_recovery.py  cline_extension.py  compare.py  corpus.py  diff_coherence.py  diff_minimality.py  extension_discovery.py  gate.py  gold.py  judge.py  judge_run.py  (+7 more)
tests/: test_advice.py  test_agreement.py  test_agreement_multi.py  test_apply_recovery.py  test_cline_extension.py  test_compare.py  test_corpus.py  test_datafiles.py  test_diff_coherence.py  test_diff_minimality.py  test_expected_input_guards.py  test_extension_cli.py  test_extension_discovery.py  test_extension_real_capture.py  test_fixture_drift.py  test_gate.py  test_gold.py  test_gold_hardcases.py  test_harness_gap_capture.py  test_judge_live.py  test_judge_multidraw.py  test_judge_run.py  test_label_gold.py  test_labels.py  test_live_capture.py  test_live_captures_day11.py  test_loader.py  test_render_demo_svg.py  test_report.py  test_tool_selection.py  test_tool_vocab.py
(+1 files in other folders)
