[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinescope"
version = "0.0.0"
description = "A Cline eval harness: scores diff quality + tool-trajectory from a real Cline messages.json trace."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
clinescope = "clinescope.__main__:main"

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/clinescope"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
