[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinescope"
version = "0.1.0"
description = "A Cline eval harness: scores diff quality + tool-trajectory from a real Cline messages.json trace."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
clinescope = "clinescope.__main__:main"
clinescope-gate = "clinescope.gate:main"
clinescope-corpus = "clinescope.corpus:main"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/clinescope"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
