[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinescope"
version = "1.1.0"
description = "A Cline eval harness: scores diff quality + tool-trajectory from a real Cline messages.json trace."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = []
keywords = ["cline", "eval", "llm", "agent", "coding-agent", "diff", "regression"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/minh2416294/clinescope"
Repository = "https://github.com/minh2416294/clinescope"
Issues = "https://github.com/minh2416294/clinescope/issues"

[project.scripts]
clinescope = "clinescope.__main__:main"
clinescope-gate = "clinescope.gate:main"
clinescope-corpus = "clinescope.corpus:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/clinescope"]

# Ship the committed data (real-trace corpus + the human-labeled gold set + judge cache)
# alongside the package so `clinescope-corpus` and the judge tooling work from a pip
# install, not only from a source checkout. The default-data resolver (_datafiles.py)
# finds these at site-packages/{examples,gold} when installed.
[tool.hatch.build.targets.wheel.force-include]
"examples" = "examples"
"gold" = "gold"

[tool.hatch.build.targets.sdist.force-include]
"examples" = "examples"
"gold" = "gold"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# Coverage settings. The `--cov` flags are passed on the CI command line (see
# ci.yml), NOT in addopts, so a bare `pytest -q` still runs for a contributor who
# installed only base pytest. `--cov-fail-under=90` is the gate: coverage measured
# at ~93% on the current suite (93.16% on CI), with headroom so a small unrelated
# change doesn't trip CI, while a real regression (a big block of untested code) does.
[tool.coverage.run]
source = ["clinescope"]
branch = false

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
files = ["src", "scripts"]
strict = true
# Reject a bare `# type: ignore`: every suppression must name its error code (and a
# reason), so a future ignore can never silently hide an unrelated error.
enable_error_code = ["ignore-without-code"]
